--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile group: 'org.projectlombok', name: 'lombok', version: '0.11.8'
     compile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
     compile group: 'org.codehaus.jackson', name: 'jackson-core-lgpl', version: '1.9.11'
+    compile group:'com.fasterxml.jackson.core', name:'jackson-databind', version:'2.2.3'
 	compile group: 'org.codehaus.jackson', name: 'jackson-mapper-lgpl', version: '1.9.11'
 	compile group: 'joda-time',name:'joda-time',version:'1.6.1'
 	compile group: 'com.google.guava',name:'guava',version:'17.0' 
