--- a/build.gradle
+++ b/build.gradle
@@ -8,16 +8,16 @@ repositories {
 }
 
 ext.springVersion = "3.2.2"
-ext.springSecurity = "3.2.2"
+ext.springSecurity = "3.0.5"
 ext.springExceptionHandlerVersion = "2.0.1"
 ext.springDataVersion = "1.6.1"
 
 List SPRING = [
         "org.springframework.data:spring-data-mongodb:${springDataVersion}.RELEASE",
          "org.springframework:spring-webmvc:${springVersion}.RELEASE",
-        "org.springframework:spring-web:${springVersion}.RELEASE",
-        "org.springframework:spring-context:${springVersion}.RELEASE",
-        "org.springframework:spring-test:${springVersion}.RELEASE",     
+       
+        "org.springframework:spring-test:${springVersion}.RELEASE",
+        "org.springframework:spring-context-support:${springVersion}.RELEASE",
         "org.springframework.security:spring-security-core:${springSecurity}.RELEASE",
         "org.springframework.security:spring-security-web:${springSecurity}.RELEASE",
         "org.springframework.security:spring-security-config:${springSecurity}.RELEASE",
@@ -30,8 +30,7 @@ List SPRING = [
 
 List SPRING_SOURCES = [
         "org.springframework:spring-webmvc:${springVersion}.RELEASE:sources",
-        "org.springframework:spring-web:${springVersion}.RELEASE:sources",
-        "org.springframework:spring-context:${springVersion}.RELEASE:sources",
+        
          "org.springframework.security:spring-security-core:${springSecurity}.RELEASE",
         "org.springframework.security:spring-security-web:${springSecurity}.RELEASE",
         "org.springframework.security:spring-security-config:${springSecurity}.RELEASE",
