--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 db.name=empref
-
+db.mongo.client=127.0.0.1
 #------ HttpClient Config ---------#
 httpClient.maxConnectionsPerRoute = 20
 httpClient.maxConnections = 50
