--- a/build.gradle
+++ b/build.gradle
@@ -59,4 +59,6 @@ dependencies {
 	compile group: 'commons-io',name:'commons-io',version:'2.4'
 	compile group: 'commons-fileupload',name:'commons-fileupload',version:'1.3'
     testCompile SPRING, SPRING_SOURCES, XUNIT
+    compile 'javax.activation:activation:1.1'
+    compile 'javax.mail:mail:1.4.1'
 }
