Update DB Setup Script, fix background

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-db.name=empref
+db.name=osirpdb
 db.mongo.client=127.0.0.1
 #------ HttpClient Config ---------#
 httpClient.maxConnectionsPerRoute = 20
